--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,8 @@
     <color name="colorAccent">#F9A825</color>
     <color name="white">#FFFFFF</color>
 
+    <color name="colorSuccess">@android:color/holo_green_dark</color>
+    <color name="colorFailed">@android:color/holo_red_dark</color>
+    <color name="colorStart">@android:color/secondary_text_light</color>
+
 </resources>
