--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,5 @@
     <dimen name="default_text_size">20sp</dimen>
     <dimen name="default_margin">20dp</dimen>
     <dimen name="default_option_size">16sp</dimen>
+    <dimen name="default_padding">16dp</dimen>
 </resources>
